syntax = "proto3";

package events.v1;

option go_package = "github.com/SARVESHVARADKAR123/RealChat/contracts/gen/go/events/v1";

message MessageSent {
  string message_id = 1;
  string conversation_id = 2;
  string sender_id = 3;
  string content = 4;
  int64 timestamp = 5;
}
